Enhance contact form with better error handling and EmailJS backup - Add form processing config to netlify.toml - Improve environment detection for Netlify vs development - Add EmailJS as backup email service - Enhanced error messages with better UX

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,15 @@
   # Node.js version
   NODE_VERSION = "18"
 
+# Enable form processing
+[build.processing]
+  skip_processing = false
+
+# Form settings
+[forms]
+  # Enable form spam protection
+  spam_protection = true
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
