--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,12 @@
   # Enable form spam protection
   spam_protection = true
 
+# Redirect successful form submissions to thank you page
+[[redirects]]
+  from = "/thank-you"
+  to = "/thank-you.html"
+  status = 200
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
