Add standalone HTML contact form as fallback - Simplify React form submission to use native HTML form - Create beautiful standalone contact page at /contact - Add backup contact link for users experiencing form issues - Update netlify.toml with contact page redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,12 @@
   # Enable form spam protection
   spam_protection = true
 
+# Redirect to standalone contact page
+[[redirects]]
+  from = "/contact"
+  to = "/contact.html"
+  status = 200
+
 # Redirect successful form submissions to thank you page
 [[redirects]]
   from = "/thank-you"
