Replace React favicon with custom portfolio favicon
- Add custom SVG favicon with 'H' initial and gradient background
- Update index.html to reference new favicon.svg and improve metadata
- Update manifest.json with portfolio branding
- Remove default React icons (favicon.ico, logo192.png, logo512.png, logo.svg)
- Set custom theme color to match portfolio gradient (#667eea)
- Improve app description for better SEO

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Hania's Portfolio",
+  "name": "Hania's Portfolio - Full Stack Developer",
   "icons": [
     {
       "src": "favicon.ico",
