🚀 Fix Netlify favicon display issue
- Add cache-busting version parameters (?v=2) to prevent old favicon caching
- Add Netlify headers for favicon files to control caching behavior
- Remove broken apple-touch-icon reference
- Configure proper Content-Type headers for icon files
- This should resolve the React icon showing instead of custom favicon

--- a/netlify.toml
+++ b/netlify.toml
@@ -39,3 +39,16 @@
   for = "/static/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+# Favicon specific headers to prevent caching issues
+[[headers]]
+  for = "/favicon.*"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
+    Content-Type = "image/x-icon"
+
+[[headers]]
+  for = "/*.svg"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
+    Content-Type = "image/svg+xml"
